bindings/python/cdef/ezo_api.h

typedef unsigned char uint8_t;
typedef unsigned int uint32_t;
typedef unsigned long size_t;
struct termios { ...; };
typedef enum {
  EZO_OK = 0,
  EZO_ERR_INVALID_ARGUMENT,
  EZO_ERR_BUFFER_TOO_SMALL,
  EZO_ERR_TRANSPORT,
  EZO_ERR_PROTOCOL,
  EZO_ERR_PARSE
} ezo_result_t;
typedef enum {
  EZO_COMMAND_GENERIC = 0,
  EZO_COMMAND_READ,
  EZO_COMMAND_READ_WITH_TEMP_COMP,
  EZO_COMMAND_CALIBRATION
} ezo_command_kind_t;
typedef struct {
  uint32_t wait_ms;
} ezo_timing_hint_t;
const char *ezo_result_name(ezo_result_t result);
typedef enum {
  EZO_STATUS_UNKNOWN = 0,
  EZO_STATUS_SUCCESS,
  EZO_STATUS_FAIL,
  EZO_STATUS_NOT_READY,
  EZO_STATUS_NO_DATA
} ezo_device_status_t;
typedef struct ezo_i2c_transport ezo_i2c_transport_t;
typedef struct {
  uint8_t address;
  const ezo_i2c_transport_t *transport;
  void *transport_context;
  uint8_t last_device_status;
} ezo_i2c_device_t;
ezo_result_t ezo_device_init(ezo_i2c_device_t *device,
                             uint8_t address,
                             const ezo_i2c_transport_t *transport,
                             void *transport_context);
ezo_result_t ezo_send_command(ezo_i2c_device_t *device,
                              const char *command,
                              ezo_command_kind_t kind,
                              ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_send_command_with_float(ezo_i2c_device_t *device,
                                         const char *prefix,
                                         double value,
                                         uint8_t decimals,
                                         ezo_command_kind_t kind,
                                         ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_send_read(ezo_i2c_device_t *device, ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_send_read_with_temp_comp(ezo_i2c_device_t *device,
                                          double temperature_c,
                                          uint8_t decimals,
                                          ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_read_response(ezo_i2c_device_t *device,
                               char *buffer,
                               size_t buffer_len,
                               size_t *response_len,
                               ezo_device_status_t *device_status);
typedef enum {
  EZO_UART_RESPONSE_UNKNOWN = 0,
  EZO_UART_RESPONSE_DATA,
  EZO_UART_RESPONSE_OK,
  EZO_UART_RESPONSE_ERROR,
  EZO_UART_RESPONSE_OVER_VOLTAGE,
  EZO_UART_RESPONSE_UNDER_VOLTAGE,
  EZO_UART_RESPONSE_RESET,
  EZO_UART_RESPONSE_READY,
  EZO_UART_RESPONSE_SLEEP,
  EZO_UART_RESPONSE_WAKE,
  EZO_UART_RESPONSE_DONE
} ezo_uart_response_kind_t;
typedef struct ezo_uart_transport ezo_uart_transport_t;
typedef struct {
  const ezo_uart_transport_t *transport;
  void *transport_context;
  uint8_t last_response_kind;
} ezo_uart_device_t;
ezo_result_t ezo_uart_device_init(ezo_uart_device_t *device,
                                  const ezo_uart_transport_t *transport,
                                  void *transport_context);
ezo_result_t ezo_uart_send_command(ezo_uart_device_t *device,
                                   const char *command,
                                   ezo_command_kind_t kind,
                                   ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_uart_send_command_with_float(ezo_uart_device_t *device,
                                              const char *prefix,
                                              double value,
                                              uint8_t decimals,
                                              ezo_command_kind_t kind,
                                              ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_uart_send_read(ezo_uart_device_t *device, ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_uart_send_read_with_temp_comp(ezo_uart_device_t *device,
                                               double temperature_c,
                                               uint8_t decimals,
                                               ezo_timing_hint_t *timing_hint);
ezo_result_t ezo_uart_read_line(ezo_uart_device_t *device,
                                char *buffer,
                                size_t buffer_len,
                                size_t *response_len,
                                ezo_uart_response_kind_t *response_kind);
ezo_result_t ezo_uart_read_terminal_response(ezo_uart_device_t *device,
                                             ezo_uart_response_kind_t *response_kind);
ezo_result_t ezo_uart_read_ok(ezo_uart_device_t *device);
ezo_result_t ezo_uart_discard_input(ezo_uart_device_t *device);
typedef struct { int fd; } ezo_linux_i2c_context_t;
typedef struct {
  int fd;
  uint32_t read_timeout_ms;
  int owns_fd;
  int has_saved_termios;
  struct termios saved_termios;
} ezo_uart_posix_serial_t;